Yet another style recalc bug we have for web components :(
<rdar://problem/43366526>
Created attachment 347247 [details] Fixes the bug
Comment on attachment 347247 [details] Fixes the bug Attachment 347247 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/8877024 New failing tests: fast/custom-elements/defined-update-style.html
Created attachment 347249 [details] Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
Created attachment 347286 [details] Patch for landing
Comment on attachment 347286 [details] Patch for landing Thanks for the review! Wait for EWS again now that I've fixed the test.
Comment on attachment 347286 [details] Patch for landing Clearing flags on attachment: 347286 Committed r234953: <https://trac.webkit.org/changeset/234953>
All reviewed patches have been landed. Closing bug.