Custom element doesn't invalidate its style when :defined rule starts to apply https://bugs.webkit.org/show_bug.cgi?id=188637

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Rebaselined the test now that all relevant test cases pass. The only remaining test failures
are for customized builtins which we do not and shall not implement.

* web-platform-tests/custom-elements/pseudo-class-defined-expected.txt:

Source/WebCore:

Fixed the bug by invalidating the subtree when a custom element gets defined.

Test: fast/custom-elements/defined-update-style.html

* dom/Element.cpp:
(WebCore::Element::setIsDefinedCustomElement):

LayoutTests:

Added a regression test.

* fast/custom-elements/defined-update-style-expected.html: Added.
* fast/custom-elements/defined-update-style.html: Added.


Canonical link: https://commits.webkit.org/203733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234953 268f45cc-cd09-0410-ab3c-d52691b4dbfc